# double_to_float_converter

./: .gitignore  CMakeLists.txt  copy_and_parse.py
data/: patterns.flex
src/: Scanner.cpp  Scanner.h  main.cpp
src/parser/: DoubleToFloatParser.cpp  DoubleToFloatParser.h
src/scanner/: FileHandler.cpp  FileHandler.h  FileScanner.cpp  FileScanner.h  MultilineCommentResistantStringScanner.cpp  MultilineCommentResistantStringScanner.h  Scanner.cpp  Scanner.h  StringScanner.cpp  StringScanner.h
test/: CMakeLists.txt  SimpleStringTest.cpp  SourceStringTest.cpp  StringScanner.cpp  StringScanner.h
test/parser/: CMakeLists.txt  ParserTest.cpp
test/scanner/: CMakeLists.txt  SimpleStringTest.cpp  SourceStringTest.cpp
